Quick fix for extra space between content and footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,6 +89,10 @@ body {
     font-weight: 400;
 }
 
+.extra-space {
+    margin-top: 120px;
+}
+
 /* ------------------------------------------------------ END FOOTER*/
 /* ------------------------------------------------------ TOASTS*/
 
